--- a/style.css
+++ b/style.css
@@ -32,6 +32,8 @@ main {
   display: flex;
   justify-content: center;
   flex-direction: row;
+  position: relative;
+  z-index: -2;
 }
 
 .container {
@@ -90,6 +92,35 @@ form input[type="text"]:focus {
 .btn:hover {
   transform: scale(1.03);
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+}
+
+section {
+  background-color: #a79277;
+  padding: 50px;
+  margin-top: -1px;
+}
+
+section h1 {
+  font-size: 20px;
+  margin: 0px;
+}
+
+main p {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-style: italic;
+  text-align: center;
+  color: #fff2e1;
+  text-align: center;
+  margin-top: 20px;
+  font-size: 15px;
+}
+
+svg {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  z-index: -1;
 }
 
 @media only screen and (max-width: 600px) {
